Shift + click selection for Grid and List (fixes #372)

--- a/packages/cx/src/widgets/List.scss
+++ b/packages/cx/src/widgets/List.scss
@@ -49,6 +49,10 @@
          cursor: pointer;
       }
 
+      &:hover {
+         @include cx-add-state-rules($cx-list-item, hover);
+      }
+
       &.#{$state}cursor {
          @include cx-add-state-rules($cx-list-item, hover);
 
